[C-4649] fix jumping date picker popup

--- a/packages/web/src/components/edit/fields/DatePickerField.module.css
+++ b/packages/web/src/components/edit/fields/DatePickerField.module.css
@@ -7,6 +7,10 @@
   width: 300px;
 }
 
+.datePicker {
+  height: 296px;
+}
+
 .label {
   color: var(--harmony-n-400);
   font-size: var(--harmony-font-s);
